@@ -64,6 +64,16 @@
     <content_attribute id="money-gambling">none</content_attribute>
   </content_rating>
   <releases>
+    <release version="46~alpha" date="2024-01-06" type="development">
+      <description>
+        <p>Overview of changes in lightsoff 46.alpha</p>
+        <ul>
+          <li>Updated translations</li>
+          <li>Updated incorrect links in help (Andre Klapper)</li>
+          <li>Remove GNOME branding !19 (Sabri Ünal)</li>
+        </ul>
+      </description>
+    </release>
     <release version="40.0.1" date="2021-03-17" type="stable">
       <description>
         <p>Overview of changes in lightsoff 40.0.1</p>
