@@ -1,3 +1,10 @@
+Lights Off 46.alpha
+==================
+
+* Updated translations
+* Updated incorrect links in help (Andre Klapper)
+* Remove GNOME branding !19 (Sabri Ünal)
+
 Lights Off 40.0.1
 ==================
 * Updated appdata with 40.0 stable info
